* Fix project map in detail page (fixes #734)
* Fix project listed deleted interventions (fixes #739)
* Fix project listed infrastructures through interventions (fixes #740)
* Fix saving intervention form on infrastructure
* Repair serializing of properties after upgrade of django-geojson (fixes #755)
* Added ``public_transport`` and ``advised_parking`` to trek JSON detail API (fixes #758)
* Upgraded to django-geojson 2.0
* Upgraded to Django 1.5

:notes:

    Specify allowed host (server IP) in ``etc/settings.ini`` (*for example*):
    * ``host = 45.56.78.90``
    Empty object caches:
    * ``sudo /etc/init.d/memcached restart``
    * ``rm -rf ./var/cache/*``


0.18 (2013-06-06)
-----------------

* Add pretty trek duration in JSON
* Add information desk field in Trek (fixes #624)
* Map screenshot fix (ref #597)"
* Default values for most Path DB columns (fixes #965)
* Trek printable version looks for OpenDocument (*.odt) named "docprint" in attachments (fixes #686)
* Show structure column and filter in admin (fixes #699)
* Path snapping now uses 2D distance to prevent weird behaviour (fixes #697)
* Fix display of path comfort in detail page (fixes #701)
* Compile translations of apps under development (fixes #704)
* Fix display of total manday in intervention detail
* Fix field display in intervention creation (fixes #703)
* Fix surface computation (fixes #708)
* Fix shapefile serialization if path has no trail (fixes #706)


0.17 (2013-05-17)
-----------------

* Show trek duration as human readable in minutes, hours and days (fixes #471, #683)
* Fix hover on paths that interfered with clic for topology creation (fixes #680)
* Run API urls on different workers (ref #672)
* Fix redirect to root url after logout (fixes #264)
* Fix redirect to next after login (fixes #381)
* Switch to Memcached instead of local memory in production
* Move secret key to settings.ini
* Relate paperclip FileType to Structure (fixes #256)